--- a/requirements.txt
+++ b/requirements.txt
@@ -15,8 +15,14 @@ jsonschema==2.6.0
 jupyter==1.0.0
 jupyter-client==5.2.3
 jupyter-console==6.0.0
+jupyter-contrib-core==0.3.3
+jupyter-contrib-nbextensions==0.5.0
 jupyter-core==4.4.0
+jupyter-highlight-selected-word==0.2.0
+jupyter-latex-envs==1.4.4
+jupyter-nbextensions-configurator==0.4.0
 kiwisolver==1.0.1
+lxml==4.2.5
 MarkupSafe==1.0
 matplotlib==3.0.0
 mistune==0.8.4
@@ -35,6 +41,7 @@ ptyprocess==0.6.0
 Pygments==2.2.0
 pyparsing==2.2.2
 python-dateutil==2.7.3
+PyYAML==3.13
 pyzmq==17.1.2
 qtconsole==4.4.2
 Send2Trash==1.5.0
