--- a/requirements.txt
+++ b/requirements.txt
@@ -44,6 +44,8 @@ python-dateutil==2.7.3
 PyYAML==3.13
 pyzmq==17.1.2
 qtconsole==4.4.2
+scikit-learn==0.20.1
+scipy==1.1.0
 Send2Trash==1.5.0
 simplegeneric==0.8.1
 six==1.11.0
