--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,14 @@
 backcall==0.1.0
 bleach==3.0.2
+certifi==2018.11.29
+chardet==3.0.4
 cycler==0.10.0
 decorator==4.3.0
 defusedxml==0.5.0
 entrypoints==0.2.3
+googledrivedownloader==0.3
 hide-code==0.5.2
+idna==2.8
 ipykernel==5.1.0
 ipython==7.0.1
 ipython-genutils==0.2.0
@@ -44,6 +48,7 @@ python-dateutil==2.7.3
 PyYAML==3.13
 pyzmq==17.1.2
 qtconsole==4.4.2
+requests==2.21.0
 scikit-learn==0.20.1
 scipy==1.1.0
 Send2Trash==1.5.0
@@ -53,6 +58,7 @@ terminado==0.8.1
 testpath==0.4.2
 tornado==5.1.1
 traitlets==4.3.2
+urllib3==1.24.1
 wcwidth==0.1.7
 webencodings==0.5.1
 widgetsnbextension==3.4.2
